--- a/co2/energy.html
+++ b/co2/energy.html
@@ -7,7 +7,7 @@
   <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
   <link rel="stylesheet" type="text/css" href="master.css" />
   <link rel="stylesheet" type="text/css" href="energy.css"/>
-	<link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Alegreya|Alegreya+Sans|Merriweather|Merriweather+Sans|Nunito|Nunito+Sans|Quattrocento|Quattrocento+Sans|Roboto|Roboto+Mono|Roboto+Slab|Montserrat" rel="stylesheet">
 	<script type="text/javascript" src="master.js"></script>
   <!-- Load an icon library to show a hamburger menu (bars) on small screens -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -135,7 +135,7 @@
     }
     d3.select(self.frameElement).style("height", height + "px");
   </script>
-  <p>It is important to know how the use of energy can impact climate change. As we can see in this sunburst, more and more energy is being
+  <p id="shortDescription">It is important to know how the use of energy can impact climate change. As we can see in this sunburst, more and more energy is being
     used every year. These energy include coals, natuarl gas, and oil. However, there are energy and resources that a non-renewable. Meaning
     if we keep producing and consuming resources and energy, the world will eventually run out. We need to know how to minimize our energy usage
     not only for the world, but for the climate as well. Fossil fuels for example generate a lot of CO2 that is a factor to global warming. This 
