--- a/co2/otherVisuals.html
+++ b/co2/otherVisuals.html
@@ -22,6 +22,8 @@
     });
   </script>
 
+  <h2>CO2 Emissions Per Year (in Metric Tons)</h2>
+
   <div class="displayDiv" id="userInput">
     <button id="play-button">Play</button>
     <p id="instructions">Or</br></br>Enter a year between 1960 and 2017</p>
@@ -44,6 +46,12 @@
     <svg>
     </svg>
   </div>
+
+  <p id="description">Carbon dioxide (CO2). A minor but very important component of the atmosphere, carbon dioxide is released through natural processes such as respiration and volcano eruptions and through human activities such as deforestation, land use changes, and burning fossil fuels. Humans have increased atmospheric CO2 concentration by more than a third since the Industrial Revolution began. This is the most important long-lived "forcing" of climate change.</p>
+
+  <p id="sources">
+        Source:<a href="http://www.globalcarbonatlas.org/en/CO2-emissions" target="_blank">http://www.globalcarbonatlas.org/en/CO2-emissions</a><br/>
+  </p>  
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/4.6.0/d3.min.js"></script>
 
