--- a/co2/navigation.html
+++ b/co2/navigation.html
@@ -1,10 +1,12 @@
 <div class="menubar" id="mymenu">
   
   <a href="index.html">HOME</a>
-  <a href="mapsPage.html">WORLD MAPS</a>
   <a href="otherVisuals.html">CO2</a>
   <a href="tempVisual.html">TEMPERATURE</a>
   <a href="energy.html">ENERGY</a>
+  <a href="co2Chloro.html">CO2 World Map</a>
+  <a href="tempChloro.html">TEMPERATURE World Map</a>
+  <a href="energyChloro.html">ENERGY World Map</a>
   <a href="javascript:void(0);" class="icon" onclick="hamFunction()">
     <i class="fa fa-bars"></i>
   </a>
