fixing highlight on chloro tabs. highlighted when on their pages

--- a/co2/tempChloro.html
+++ b/co2/tempChloro.html
@@ -21,7 +21,7 @@
   <script>
     $(function(){
       $("#nav-placeholder").load("navigation.html", function() {
-        $("a[href= 'otherVisuals.html']").addClass("selected");
+        $("a[href= 'tempChloro.html']").addClass("selected");
       });
     });
   </script>
