--- a/co2/co2Chloro.html
+++ b/co2/co2Chloro.html
@@ -21,7 +21,7 @@
   <script>
     $(function(){
       $("#nav-placeholder").load("navigation.html", function() {
-        $("a[href= 'otherVisuals.html']").addClass("selected");
+        $("a[href= 'co2Chloro.html']").addClass("selected");
       });
     });
   </script>
