fixing world maps styling

--- a/co2/energyChloro.html
+++ b/co2/energyChloro.html
@@ -14,6 +14,13 @@
   <script type="text/javascript" src="master.js"></script>  
   <!-- Load an icon library to show a hamburger menu (bars) on small screens -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <style>
+    h2 {
+    position: absolute;
+    left: 00px;
+    top: 50px;
+  }
+    </style>
 </head>
 <body>
 
@@ -26,7 +33,7 @@
     });
   </script>
 
-  <h2>CO2 Emissions Per Year (in Metric Tons)</h2>
+  <h2>Global Energy Consumption</h2>
   <div id="slider"></div>
   <script src="d3-tip.js"></script>
   <script type="text/javascript" src="energyChloro.js"></script>
