--- a/co2/tempChloro.html
+++ b/co2/tempChloro.html
@@ -14,6 +14,14 @@
   <script type="text/javascript" src="master.js"></script>
   <!-- Load an icon library to show a hamburger menu (bars) on small screens -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+  <style>
+  h2 {
+  position: absolute;
+  left: 00px;
+  top: 50px;
+}
+  </style>
 </head>
 <body>
 
@@ -26,7 +34,7 @@
     });
   </script>
 
-  <h2>CO2 Emissions Per Year (in Metric Tons)</h2>
+  <h2>Temperature Over Time</h2>
   <p id="description">Use the slider to investigate temperature change around the globe. Hover over the countries to see their corresponding values.</p>
   <div id="slider"></div>
   <p id="description1">It can be hard to see temperature change over time when over the past 100 years, global temperature has only changed by 1 degree Celcius</p>
