--- a/co2/co2Chloro.html
+++ b/co2/co2Chloro.html
@@ -14,6 +14,16 @@
   <script type="text/javascript" src="master.js"></script>  
   <!-- Load an icon library to show a hamburger menu (bars) on small screens -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+  <style>
+    h2 {
+    position: absolute;
+    left: 00px;
+    top: 50px;
+  }
+    </style>
+
+
 </head>
 <body>
 
