--- a/co2/tempChloro.html
+++ b/co2/tempChloro.html
@@ -4,9 +4,9 @@
   <title>CO2</title>
   <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
 
-  <script src="http://d3js.org/d3.v4.min.js"></script>
-  <script src="http://d3js.org/queue.v1.min.js"></script>
-  <script src="http://d3js.org/topojson.v1.min.js"></script>
+  <script src="https://d3js.org/d3.v4.min.js"></script>
+  <script src="https://d3js.org/queue.v1.min.js"></script>
+  <script src="https://d3js.org/topojson.v1.min.js"></script>
 
 
   <link rel="stylesheet" type="text/css" href="master.css" />
