--- a/co2/tempChloro.html
+++ b/co2/tempChloro.html
@@ -47,7 +47,7 @@
   <div class="displayDiv" id="legend">
     <img src="png/chloroTempStart.png" alt="chloroTempStart missing">
     <img src="png/chloroTempMid.png" alt="chloroTempMid missing">
-    <img src="png/chloroTempMidLate.png" alt="chloroTempMidLate missing">
+    <img src="png/ChloroTempMidLate.png" alt="chloroTempMidLate missing">
     <img src="png/chloroTempEnd.png" alt="chloroTempEnd missing">
   </div>
 </body>
