Fixed edge cases for co2 and tooltips for co2 and maps

--- a/src/co2visual.html
+++ b/src/co2visual.html
@@ -19,7 +19,7 @@
   <script>
     $(function(){
       $("#nav-placeholder").load("navigation.html", function() {
-        $("a[href= 'otherVisuals.html']").addClass("selected");
+        $("a[href= 'co2visual.html']").addClass("selected");
       });
     });
   </script>
