--- a/release2/src/energy.html
+++ b/release2/src/energy.html
@@ -5,7 +5,7 @@
   <!-- Code referenced from Mike Bostock -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <script type="text/javascript" src="d3-v3.js"></script>
+  <script src="https://d3js.org/d3.v4.min.js"></script>
 
   <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
   <link rel="stylesheet" type="text/css" href="master.css" />
