Changed positioning of bubbles in CO2 visual

--- a/src/co2visual.html
+++ b/src/co2visual.html
@@ -45,7 +45,13 @@
   </div>
 
   <div class="chart-example" id="chart">
-    <svg>
+    <svg id="mainChart">
+    </svg>
+    <svg id="northAmerica">
+    </svg>
+    <svg id="europe">
+    </svg>
+    <svg id="asia">
     </svg>
   </div>
 
