fixed title bug

--- a/src/tempVisual.html
+++ b/src/tempVisual.html
@@ -486,10 +486,9 @@
     var ret5 = ret4.replace(/\//g,' ');
 
 
-
+    title.text(2014)
     var titSource = updateTitle(source);
 
-    
     title2.text(ret5)
 
 
