--- a/src/tempVisual.html
+++ b/src/tempVisual.html
@@ -56,10 +56,10 @@
     </p>
 </div>
 <div class="displayDiv" id="userInput">
-    <button type="button" button id = "leftButt" onclick="changeColor('left')">left</button>
+    <button type="button" button id = "leftButt" onclick="changeColor('left')">Decrease Year</button>
 </div>
 <div class="displayDivRight" id="userInput">
-    <button type="button" button id = "rightButt" onclick="changeColor('right')">right</button>
+    <button type="button" button id = "rightButt" onclick="changeColor('right')">Increase Year</button>
 </div>
 <select id="inds">
     <option value="data/crucy.v3.23.1901.2014.Afghanistan.tmp.tsv">Afghanistan</option>
