--- a/src/co2visual.html
+++ b/src/co2visual.html
@@ -31,7 +31,11 @@
     <p id="instructions">Or</br></br>Enter a year between 1960 and 2017</p>
     <input type="number" id="myVal" placeholder="Year">
     </br></br>
-    <input type="submit" id="Submit" value="Enter">
+    <input type="submit" id="Submit" value="Enter"></br></br>
+    <input type="submit" id="plusFive" value="+5">
+    <input type="submit" id="minusFive" value="-5"></br></br>
+    <input type="submit" id="plusTen" value="+10">
+    <input type="submit" id="minusTen" value="-10">
   </div>
 
   <div id="vis">
