--- a/src/co2visual.html
+++ b/src/co2visual.html
@@ -5,6 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
+  <script src="https://d3js.org/d3-color.v1.min.js"></script>
+  <script src="https://d3js.org/d3-interpolate.v1.min.js"></script>
+  <script src="https://d3js.org/d3-scale-chromatic.v1.min.js"></script>
 
 	<link rel="stylesheet" type="text/css" href="master.css" />
   <link rel="stylesheet" type="text/css" href="scatterPlot.css" />
@@ -63,8 +66,7 @@
   </p>  
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/4.6.0/d3.min.js"></script>
-
   <script type="text/javascript" src="bubbleChart.js"></script>
-
+  
 </body>
 </html>
