co2 all on single webpage, renamed some files

--- a/src/co2.html
+++ b/src/co2.html
@@ -5,12 +5,17 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
+  
+  <script src="https://d3js.org/d3.v4.min.js"></script>
+  <script src="https://d3js.org/queue.v1.min.js"></script>
+  <script src="https://d3js.org/topojson.v1.min.js"></script>
+  
   <script src="https://d3js.org/d3-color.v1.min.js"></script>
   <script src="https://d3js.org/d3-interpolate.v1.min.js"></script>
   <script src="https://d3js.org/d3-scale-chromatic.v1.min.js"></script>
 
 	<link rel="stylesheet" type="text/css" href="master.css" />
-  <link rel="stylesheet" type="text/css" href="scatterPlot.css" />
+  <link rel="stylesheet" type="text/css" href="co2ScatterPlot.css" />
   <link href="https://fonts.googleapis.com/css?family=Alegreya|Alegreya+Sans|Merriweather|Merriweather+Sans|Nunito|Nunito+Sans|Quattrocento|Quattrocento+Sans|Roboto|Roboto+Mono|Roboto+Slab|Montserrat" rel="stylesheet">
   <script type="text/javascript" src="master.js"></script>  
   <!-- Load an icon library to show a hamburger menu (bars) on small screens -->
@@ -66,7 +71,11 @@
   </p>  
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/4.6.0/d3.min.js"></script>
-  <script type="text/javascript" src="bubbleChart.js"></script>
+  <script type="text/javascript" src="co2Bubble.js"></script>
+  
+  <div id="slider"></div>
+  <script src="d3-tip.js"></script>
+  <script type="text/javascript" src="co2Chloro.js"></script>
   
 </body>
 </html>
