Nav bar works, edge case clean ups

--- a/src/navigation.html
+++ b/src/navigation.html
@@ -1,9 +1,9 @@
 <div class="menubar" id="mymenu">
 
-  <a href="index.html">HOME</a>
-  <a href="co2/co2.html">CO2</a>
-  <a href="temp/temperature.html">TEMPERATURE</a>
-  <a href="energy/energy.html">ENERGY</a>
+  <a href="/index.html">HOME</a>
+  <a href="/co2/co2.html">CO2</a>
+  <a href="/temp/temperature.html">TEMPERATURE</a>
+  <a href="/energy/energy.html">ENERGY</a>
   <a href="javascript:void(0);" class="icon" onclick="hamFunction()">
     <i class="fa fa-bars"></i>
   </a>
