--- a/src/co2/co2.html
+++ b/src/co2/co2.html
@@ -32,20 +32,19 @@
     });
   </script>
 
-  <div class="displayDiv" id="userInput">
-    <button id="play-button">Play</button>
-    <p id="instructions">Or</br></br>Enter a year between 1960 and 2017</p>
-    <input type="number" id="myVal" placeholder="Year">
-    </br></br>
-    <input type="submit" id="Submit" value="Enter"></br></br>
-    <input type="submit" id="plusFive" value="+5">
-    <input type="submit" id="minusFive" value="-5"></br></br>
-    <input type="submit" id="plusTen" value="+10">
-    <input type="submit" id="minusTen" value="-10">
-  </div>
-
   <div class="chart-example" id="chart">
     <svg id="mainChart">
+      <div id="areaButtons">
+        <button id="play-button">Play</button>
+        <p id="instructions">Or</br></br>Enter a year between 1960 and 2017</p>
+        <input type="number" id="myVal" placeholder="Year">
+        </br></br>
+        <input type="submit" id="Submit" value="Enter"></br></br>
+        <input type="submit" id="plusFive" value="+5">
+        <input type="submit" id="minusFive" value="-5"></br></br>
+        <input type="submit" id="plusTen" value="+10">
+        <input type="submit" id="minusTen" value="-10">
+      </div>
     </svg>
   </div>
 
