Style changes on CO2 Vis

--- a/src/co2/co2.html
+++ b/src/co2/co2.html
@@ -34,12 +34,13 @@
 
   <div class="chart-example" id="chart">
     <svg id="mainChart">
-      <div id="areaButtons">
+      <div id="buttonsArea">
         <button id="play-button">Play</button>
-        <p id="instructions">Or</br></br>Enter a year between 1960 and 2017</p>
+        <p id="instructions">Or</br></br>Enter a year between</br> 1960 and 2017</p>
         <input type="number" id="myVal" placeholder="Year">
-        </br></br>
-        <input type="submit" id="Submit" value="Enter"></br></br>
+        <input type="submit" id="Submit" value="Enter">
+      </div>
+      <div id="buttonsAreaTwo">
         <input type="submit" id="plusFive" value="+5">
         <input type="submit" id="minusFive" value="-5"></br></br>
         <input type="submit" id="plusTen" value="+10">
