--- a/src/navigation.html
+++ b/src/navigation.html
@@ -4,6 +4,7 @@
   <a href="/co2/co2.html">CO2</a>
   <a href="/temp/temperature.html">TEMPERATURE</a>
   <a href="/energy/energy.html">ENERGY</a>
+  <a href="/seaLevel/seaLevel.html">Sea Level</a>
   <a href="javascript:void(0);" class="icon" onclick="hamFunction()">
     <i class="fa fa-bars"></i>
   </a>
