Current webpage is highlighted

--- a/src/energy/energy.html
+++ b/src/energy/energy.html
@@ -5,10 +5,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta charset="utf-8">
 
-  
+
   <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
-  
-  
+
+
   <script src="https://d3js.org/queue.v1.min.js"></script>
   <script src="https://d3js.org/topojson.v1.min.js"></script>
   <script src="https://d3js.org/d3-color.v1.min.js"></script>
@@ -39,7 +39,7 @@
   <script>
     $(function(){
       $("#nav-placeholder").load("../navigation.html", function() {
-        $("a[href= 'energy.html']").addClass("selected");
+        $("a[href= '/energy/energy.html']").addClass("selected");
       });
     });
   </script>
