Current webpage is highlighted

--- a/src/index.html
+++ b/src/index.html
@@ -47,7 +47,7 @@
   <script>
     $(function(){
       $("#nav-placeholder").load("navigation.html", function() {
-        $("a[href= 'index.html']").addClass("selected");
+        $("a[href= '/index.html']").addClass("selected");
       });
     });
   </script>
