fixed weird merge conflict

--- a/src/energy/energy.html
+++ b/src/energy/energy.html
@@ -58,7 +58,7 @@
   <script type="text/javascript" src="energySunburst.js"></script>Code Reference from https://observablehq.com/@d3/zoomable-sunburst
 
   <div id="slider"></div>
-  <script src="d3-tip.js"></script>
+  <script src="../core/d3-tip.js"></script>
   <script type="text/javascript" src="energyChloro.js"></script>
 
 </body>
