--- a/src/co2/co2.html
+++ b/src/co2/co2.html
@@ -27,7 +27,7 @@
   <script>
     $(function(){
       $("#nav-placeholder").load("../navigation.html", function() {
-        $("a[href= '/co2/co2.html']").addClass("selected");
+        $("a[href= '../co2/co2.html']").addClass("selected");
       });
     });
   </script>
