--- a/src/energy/energy.html
+++ b/src/energy/energy.html
@@ -39,7 +39,7 @@
   <script>
     $(function(){
       $("#nav-placeholder").load("../navigation.html", function() {
-        $("a[href= '/energy/energy.html']").addClass("selected");
+        $("a[href= '../energy/energy.html']").addClass("selected");
       });
     });
   </script>
