--- a/src/seaLevel/seaLevel.html
+++ b/src/seaLevel/seaLevel.html
@@ -24,7 +24,7 @@
   <script>
     $(function(){
       $("#nav-placeholder").load("../navigation.html", function() {
-        $("a[href= '/seaLevel/seaLevel.html']").addClass("selected");
+        $("a[href= '../seaLevel/seaLevel.html']").addClass("selected");
       });
     });
   </script>
