--- a/src/index.html
+++ b/src/index.html
@@ -33,7 +33,7 @@
   };
   firebase.initializeApp(config);
   </script>
-  <link rel="stylesheet" type="text/css" href="../core/master.css" />
+  <link rel="stylesheet" type="text/css" href="core/master.css" />
   <link href="https://fonts.googleapis.com/css?family=Alegreya|Alegreya+Sans|Merriweather|Merriweather+Sans|Nunito|Nunito+Sans|Quattrocento|Quattrocento+Sans|Roboto|Roboto+Mono|Roboto+Slab|Montserrat" rel="stylesheet">
   <script type="text/javascript" href="master.js"></script>
   <!-- Load an icon library to show a hamburger menu (bars) on small screens -->
@@ -46,8 +46,8 @@
   <div id="nav-placeholder"></div>
   <script>
     $(function(){
-      $("#nav-placeholder").load("navigation.html", function() {
-        $("a[href= '/index.html']").addClass("selected");
+      $("#nav-placeholder").load("navigation2.html", function() {
+        $("a[href= 'index.html']").addClass("selected");
       });
     });
   </script>
