Choropleth Headers complete

--- a/src/co2/co2.html
+++ b/src/co2/co2.html
@@ -52,11 +52,11 @@
 <!--
 <p id="description">Carbon dioxide (CO2). A minor but very important component of the atmosphere, carbon dioxide is released through natural processes such as respiration and volcano eruptions and through human activities such as deforestation, land use changes, and burning fossil fuels. Humans have increased atmospheric CO2 concentration by more than a third since the Industrial Revolution began. This is the most important long-lived "forcing" of climate change.</p>
 -->
-
+  <!--
   <p id="sources">
         Source:<a href="http://www.globalcarbonatlas.org/en/CO2-emissions" target="_blank">http://www.globalcarbonatlas.org/en/CO2-emissions</a><br/>
   </p>
-
+-->
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/4.6.0/d3.min.js"></script>
   <script src="d3-tip.js"></script>
@@ -88,6 +88,9 @@
   <script type="text/javascript" src="co2Bubble.js"></script>
   <script type="text/javascript" src="co2Chloro.js"></script>
 
+  <script type="text/javascript" src="co2RadioButtons.js"></script>
+
+<script
 
 
 </body>
