Working on Iso/Compare Stats

--- a/src/co2/co2.html
+++ b/src/co2/co2.html
@@ -86,8 +86,9 @@
 
 
   <script type="text/javascript" src="co2Bubble.js"></script>
-  <script type="text/javascript" src="co2Chloro.js"></script>
 
+  <script type="text/javascript" src="co2ChloroHelper.js"></script>
+  <script type="text/javascript" src="co2Chloro.js"></script>
   <script type="text/javascript" src="co2RadioButtons.js"></script>
 
 <script
