--- a/src/co2/co2.html
+++ b/src/co2/co2.html
@@ -84,13 +84,12 @@
   <div id="slider"></div>
   <script type="text/javascript" src="co2Slider.js"></script>
 
-  <script type="text/javascript" src="co2Buttons.js"></script>
-
-
   <script type="text/javascript" src="co2Bubble.js"></script>
 
   <script type="text/javascript" src="co2ChloroHelper.js"></script>
   <script type="text/javascript" src="co2Chloro.js"></script>
+  <script type="text/javascript" src="co2ChoroButtons.js"></script>
+
   <script type="text/javascript" src="co2RadioButtons.js"></script>
 
 
