--- a/src/energy/energy.html
+++ b/src/energy/energy.html
@@ -54,7 +54,7 @@
 
   <h2 id = "yeartxt">Year: 1990</h2>
   <input id="yearslider" type="range" min="1990" max="2017" step="1" value = "1990"></input>
-  <svg id="partitionSVG" width="932" height="932" ></svg>
+  <svg id="partitionSVG" width="932" height="932" style ="position:relative; left:15%;"></svg>
   <script type="text/javascript" src="energySunburst.js"></script>Code Reference from https://observablehq.com/@d3/zoomable-sunburst
 
   <div id="slider"></div>
