added search function

--- a/src/energy/energy.html
+++ b/src/energy/energy.html
@@ -57,6 +57,11 @@
   <h2 id = "yeartxt">Year: 1990</h2>
   <input id="yearslider" type="range" min="1990" max="2017" step="1" value = "1990"></input>
   <svg id="partitionSVG" width="932" height="932" style ="position:relative; left:0%;"></svg>
+
+  
+    <input type="text" id = "searchText" placeholder="Search.." name="search" >
+    <button type="submit" id = "searchSubmit"><i class="fa fa-search"></i></button>
+  
   <script type="text/javascript" src="energySunburst.js"></script>
   <!-- Code Reference from https://observablehq.com/@d3/zoomable-sunburst -->
 
