--- a/src/seaLevel/seaLevel.html
+++ b/src/seaLevel/seaLevel.html
@@ -41,7 +41,7 @@
 
   <!-- @Alex -->
   <!-- Change the .js file and it should display on the website! -->
-  <script type="text/javascript" src="seaLevelSlider.js"></script>
+  <script type="text/javascript" src="SeaLevelSunburst.js"></script>
 
 
 
