Added buttons and inputs for comparative vs isolated

--- a/src/co2/co2.html
+++ b/src/co2/co2.html
@@ -13,6 +13,7 @@
   <script src="https://d3js.org/d3-color.v1.min.js"></script>
   <script src="https://d3js.org/d3-interpolate.v1.min.js"></script>
   <script src="https://d3js.org/d3-scale-chromatic.v1.min.js"></script>
+  <script type="text/javascript" src="textfield.js"></script>
 
 	<link rel="stylesheet" type="text/css" href="../core/master.css" />
   <link rel="stylesheet" type="text/css" href="co2ScatterPlot.css" />
