--- a/src/co2/co2.html
+++ b/src/co2/co2.html
@@ -65,6 +65,8 @@
   <script src="d3-tip.js"></script>
 
   <div id="slider"></div>
+  <div id="choroHeaderText"</div>
+
   <script type="text/javascript" src="co2Slider.js"></script>
 
   <script type="text/javascript" src="co2Bubble.js"></script>
