--- a/src/energy/energy.html
+++ b/src/energy/energy.html
@@ -59,12 +59,16 @@
   <input id="yearslider" type="range" min="1990" max="2017" step="1" value = "1990"></input>
   <input type="text" id = "searchText" placeholder="Search.." name="search" >
 
-  <!-- <table id = "burstTable" style="position: absolute;left:0%;top:400px">
-    <tr>
-      <th>Name</th>
-      <th>Size</th>
-    </tr>
-  </table> -->
+  <table id = "burstTable">
+    <thead>
+      <tr>
+        <th>Name</th>
+        <th>Size</th>
+      </tr>
+    </thead>
+    <tbody>
+    </tbody>
+  </table>
 
   <button type="submit" id = "searchSubmit"><i class="fa fa-search"></i></button>
   <p id="searchErr" style="visibility: hidden">Country not available or does not exist</p>
