Renamed & split functions into init file

--- a/src/co2/co2.html
+++ b/src/co2/co2.html
@@ -64,18 +64,16 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/4.6.0/d3.min.js"></script>
   <script src="d3-tip.js"></script>
 
-  <div id="slider"></div>
-  <div id="choroHeaderText"</div>
-
-  <script type="text/javascript" src="co2Slider.js"></script>
-
   <script type="text/javascript" src="co2Bubble.js"></script>
+	<script type="text/javascript" src="co2RadioButtons.js"></script>
 
-  <script type="text/javascript" src="co2ChloroHelper.js"></script>
-  <script type="text/javascript" src="co2Chloro.js"></script>
-  <script type="text/javascript" src="co2ChoroButtons.js"></script>
+	<div id="slider"></div>
+	<script type="text/javascript" src="co2ChoroInit.js"></script>
+	<script type="text/javascript" src="co2ChoroSlider.js"></script>
+	<script type="text/javascript" src="co2ChoroButtons.js"></script>
+	<script type="text/javascript" src="co2Choro.js"></script>
+  <script type="text/javascript" src="co2ChoroHelper.js"></script>
 
-  <script type="text/javascript" src="co2RadioButtons.js"></script>
 
 
 </body>
