--- a/src/energy/energy.html
+++ b/src/energy/energy.html
@@ -8,12 +8,13 @@
 
   <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
 
-
   <script src="https://d3js.org/queue.v1.min.js"></script>
   <script src="https://d3js.org/topojson.v1.min.js"></script>
+
   <script src="https://d3js.org/d3-color.v1.min.js"></script>
   <script src="https://d3js.org/d3-interpolate.v1.min.js"></script>
   <script src="https://d3js.org/d3-scale-chromatic.v1.min.js"></script>
+
 <script src="https://d3js.org/d3.v5.min.js"></script>
 <!-- <script src="https://d3js.org/d3.v4.min.js"></script> -->
 
@@ -74,18 +75,23 @@
   <p id="searchErr" style="visibility: hidden">Country not available or does not exist</p>
   <svg id="partitionSVG" width="1400" height="1400" style ="position:relative; left:0%;">
   </svg>
-  
+
   <script type="text/javascript" src="energySunburst.js"></script>
   <!-- Code Reference from https://observablehq.com/@d3/zoomable-sunburst -->
 
-  <div id="slider"></div>
   <script src="../core/d3-tip.js"></script>
-  <script type="text/javascript" src="energyChloro.js"></script>
+
+	<div id="slider"></div>
+	<script type="text/javascript" src="energyChoroInit.js"></script>
+	<script type="text/javascript" src="energyChoroSlider.js"></script>
+	<script type="text/javascript" src="energyChoroButtons.js"></script>
+	<script type="text/javascript" src="energyChoro.js"></script>
+	<script type="text/javascript" src="energyChoroHelper.js"></script>
 
   <p id="shortDescription">It is important to know how the use of energy can impact climate change. As we can see in this sunburst, more and more energy is being
     used every year. These energy include coals, natuarl gas, and oil. However, there are energy and resources that a non-renewable. Meaning
     if we keep producing and consuming resources and energy, the world will eventually run out. We need to know how to minimize our energy usage
-    not only for the world, but for the climate as well. Fossil fuels for example generate a lot of CO2 that is a factor to global warming. This 
+    not only for the world, but for the climate as well. Fossil fuels for example generate a lot of CO2 that is a factor to global warming. This
     visualization tells us story of how if we keep using energy like this. Climate change will accelerate.
   </p>
   <p>Source:<a href="https://yearbook.enerdata.net/" target="_blank">https://yearbook.enerdata.net/</a></p><br/>
