fixed visual bugs and include data for other charts

--- a/src/energy/energy.html
+++ b/src/energy/energy.html
@@ -74,6 +74,9 @@
   <button type="submit" id = "searchSubmit"><i class="fa fa-search"></i></button>
   <p id="searchErr" style="visibility: hidden">Country not available or does not exist</p>
   <svg id="partitionSVG" width="1400" height="1400" style ="position:relative; left:0%;">
+    <!-- <foreignObject xmlns="http://www.w3.org/1999/xhtml">
+       <h1 xmlns="http://www.w3.org/1999/xhtml" style="z-index:1"> HELLO  </h1> 
+    </foreignObject> -->
   </svg>
 
   <script type="text/javascript" src="energySunburst.js"></script>
