add table index and comapre

--- a/src/energy/energy.html
+++ b/src/energy/energy.html
@@ -58,19 +58,14 @@
 
   <h2 id = "yeartxt">Year: 1990</h2>
   
-  
-
-
-
-  
-  
   <svg id="partitionSVG" width="1400" height="1400" style ="position:relative; left:0%;">
     <foreignObject width="1400" height="1400">
 
       <input type="text" id = "searchText" placeholder="Search.." name="search" >
       <button type="submit" id = "searchSubmit"><i class="fa fa-search"></i></button>
       <p id="searchErr" style="visibility: hidden">Country not available or does not exist</p>
-      
+      <button id = "compare">COMPARE</button>
+      <button id = "isolate">ISOLATE</button>
       <input id="yearslider" type="range" min="1990" max="2017" step="1" value = "1990"></input>
       <table id = "burstTable">
         <thead>
