fixing html eleemnts tmp

--- a/src/temperature/temperature.html
+++ b/src/temperature/temperature.html
@@ -118,8 +118,10 @@
         <button id="rightButt">Increment Year</button>
     </div>
 </div>
-<input autocomplete="off" name="hidden" type="number"  step="0.01" id = "searchText" placeholder="Search.." name="search" > <br>
-<input autocomplete="off" name="hidden" type="number"  step="0.01" id = "searchText2" placeholder="Search.." name="search2" >
+<div class="col-md-2">
+<input autocomplete="off" name="hidden" type="number"  step="0.01" id = "searchText" placeholder="Search.." name="search" ></div> <br>
+<div class="col-md-2">
+<input autocomplete="off" name="hidden" type="number"  step="0.01" id = "searchText2" placeholder="Search.." name="search2" > </div>
 
 <select id="inds">
     <option value="data/crucy.v3.23.1901.2014.Afghanistan.tmp.tsv">Afghanistan</option>
