--- a/src/seaLevel/seaLevel.html
+++ b/src/seaLevel/seaLevel.html
@@ -19,6 +19,8 @@
 
 		<!-- Custom stlylesheet -->
 		<link type="text/css" rel="stylesheet" href="../css/style.css"/>
+		<!-- Custom stlylesheet -->
+		<link type="text/css" rel="stylesheet" href="SeaLevelSunburst.css"/>
 
 		<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
 		<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -82,6 +84,11 @@
 		</header>
 		<!-- /Header -->
 
+	<h1>Annual Sea Level Rise (mm/year)</h1>
+ 	<p class="white-text">As temperature increase and heat up Earth's atmosphere, sea levels also increase. - </p>
+
+ 	<!-- <script src="seaLevelSunburst.js"></script> -->
+
 
 		<script src="d3-tip.js"></script>
 
@@ -89,14 +96,27 @@
 
 	  <!-- @Alex -->
 	  <!-- Change the .js file and it should display on the website! -->
-	  <script type="text/javascript" src="seaLevelSlider.js"></script>
+	  <script type="text/javascript" src="SeaLevelSunburst.js"></script>
 
   <div class="Look-At-This-Shit">
 	<div class="container">
 		<div class="row">
 			<div class="col-md-20">
-				<h1 class="black-text">Visualizing Climate Change</h1>
-				<p class="white-text">What can we learn about all of this? You can change the width section by adjusting the col-MD value above. This fixes our stupid ass implementations. Words words words words words words words words words words words words words words words words words words words words </p>
+				<h1 class="black-text">Glacial Melting</h1>
+				<p class="white-text">The melting of land glaciers is one of the two main causes of sea level rise. As the glaciers melt, their water drips off into the ocean, adding more volume. Areas with the biggest concern of glacial melting include Antarctica and Greenland, as they host many of the worlds land glaciers. The figure below includes records of how glaciers on Antarctica have changed since 1979.</p>
+			</div>
+		</div>
+	</div>
+	</div>
+
+	 <div id="slider"></div>
+	 <script type="text/javascript" src="beeSwarmGlaciers.js"></script>
+
+	 <div class="Look-At-This-Shit">
+	<div class="container">
+		<div class="row">
+			<div class="col-md-20">
+				<p class="white-text">The melting of land glaciers is one of the two main causes of sea level rise. As the glaciers melt, their water drips off into the ocean, adding more volume. Areas with the biggest concern of glacial melting include Antarctica and Greenland, as they host many of the worlds land glaciers. The figure below includes records of how glaciers on Antarctica have changed since 1979.</p>
 			</div>
 		</div>
 	</div>
